# TPics3

./: README.md
TPics3/: CMakeLists.txt  CMakeLists.txt.user.c1f85be  animation.cpp  animation.h  animationwindow.cpp  animationwindow.h  animationwindow.ui  control_panel.cpp  control_panel.h  control_panel.ui  displaywindow.cpp  displaywindow.h  displaywindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  pixel_table.cpp  pixel_table.h  tot_avg_window.cpp  tot_avg_window.ui
TPics3/pixel_table/: control_panel.ui  pixel_table.cpp  pixel_table.h  tot_avg_window.h
